# westat

./: .gitignore  .readthedocs.yaml  HereWeGo.ipynb  README.md  environment.yml  pyproject.toml
doc/: conf.py  index.rst
docs/: environment.yml  requirements.txt
docs/source/: conf.py  index.rst  lumache.py  quickstart.rst  release_notes.rst  安装.rst  工具函数.rst  快速入门.rst  数据准备.rst  数据处理.rst  数据探索.rst  模型开发.rst  模型评估.rst
src/westat/: __init__.py  check_data_target.py  dataset.py  date_diff.py  feature_selection.py  get_auc.py  get_auc_by_card.py  get_col_bin.py  get_col_bins.py  get_col_psi.py  get_col_type.py  get_data_describe.py  get_data_discrete.py  get_data_distribution.py  get_data_iv.py  get_data_partition.py  get_data_psi.py  get_data_woe.py  get_data_woe_transform.py  get_ks.py  get_ks_by_card.py  get_model_iv.py  get_modify_bins.py  get_predict_score.py  get_psi.py  get_score_distribution.py  get_scorecard.py  get_tree_bins.py  get_vif.py  get_woe_iv.py  logger.py  plot_iv.py  plot_lift.py  plot_roc_ks.py  plot_tree.py  plot_woe.py  set_modify_bins.py  stepwise_forward.py  stepwise_lr.py  tree_to_img.py  (+2 more)
tests/: HereWeGo.ipynb
westat/: __init__.py  dataframe_to_table.py  dataset.py
westat/assess/: __init__.py  get_auc.py  get_auc_by_card.py  get_data_psi.py  get_ks.py  get_ks_by_card.py  get_psi.py  plot_ks.py  plot_lift.py  plot_roc_ks.py
westat/core/: Scorecard.py  __init__.py  column.py  table.py
westat/data/: CreditCard.xls
westat/examples/: HereWeGo.ipynb
westat/explore/: __init__.py  check_data_target.py  get_data_check.py  get_data_describe.py  get_data_distribution.py  plot_col.py  plot_counts.py  proc_means.py
westat/model/: __init__.py  feature_selection.py  finance.py  get_bins.py  get_chi2.py  get_data_bins.py  get_data_discrete.py  get_data_iv.py  get_data_type.py  get_data_woe.py  get_entropy.py  get_model_iv.py  get_predict_score.py  get_scorecard.py  get_tree_bins.py  get_woe_iv.py  get_woe_transform.py  gini_impurity.py  logistic.py  plot_corr.py  plot_iv.py  plot_woe.py  statistic.py  stepwise_lr.py
westat/modify/: __init__.py  set_update_bins.py
westat/quant/: __init__.py  get_stock.py  get_stock_i.py  get_stock_index.py  get_stock_m.py  get_stock_pk.py
westat/sample/: __init__.py
westat/utils/: __init__.py  datetime.py  get_max_continue.py  growth_rate.py  (+10 more)
(+56 files in other folders)
