[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "westat"
version = "0.2.4"
authors = [
  { name = 'westat', email='westat@foxmail.com' },
]
description = "A package for stat and data miner,calculate woe and iv,and plot woe ,plot iv,calculate ks ,plot ks and auc,plot roc"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "statsmodels",
    "tqdm",
    "seaborn",
    "openpyxl",
    "optbinning",
    "ipywidgets",
]
keywords = ["scorecard","woe","iv","roc","ks","auc","psi","lift"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    'Topic :: Scientific/Engineering',
    'Intended Audience :: Science/Research',
    'Environment :: Console',
    'Development Status :: 3 - Alpha',
]

[project.urls]
homepage = 'http://www.pyminer.com'
documentation = 'https://westat.readthedocs.io'
repository = 'https://gitee.com/westat/westat'



[tool.hatch.build.targets.sdist]
exclude = [
    "/.idea",
    "/.github",
    "/.ipynb_checkpoints",
    "/__pycache__",
    "/docs",
    "/dist",
]

[tool.hatch.build.targets.wheel]
packages = ["westat"]